# libdas

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  config.mk  das.md  description  doxygen.conf  file  hf_comp  huf_encode  huf_test  imgtest  objdump  out  premake5.lua  test.das  texttohex.c  tri
.clangd/index/: Algorithm.cpp.19C0B8AD2C1D914F.idx  Algorithm.h.BC8F63B0F3536624.idx  Api.h.5343B7B06B3189D0.idx  AsciiLineReader.cpp.A567E09FBAE8C7DB.idx  AsciiLineReader.h.1177A57EB07566E7.idx  AsciiStreamReader.cpp.0B3D40298B17871C.idx  AsciiStreamReader.h.B4C136AFE7BCD191.idx  Base64Decoder.cpp.3B5D3EDF45431E62.idx  Base64Decoder.h.C40226C6A478D1C0.idx  BufferImageTypeResolver.cpp.66839CB07973C169.idx  BufferImageTypeResolver.h.1B8358EFE22B0E77.idx  DASTool.cpp.0BEA3213DACDD4BF.idx  DASTool.h.F38FA45C070E2BE6.idx  DasParser.cpp.0AB8B0C02DD059C9.idx  DasParser.h.C7D0E103DC900580.idx  DasReaderCore.cpp.FABC38DDA76E54E6.idx  DasReaderCore.h.F5AEC4194355B8C3.idx  DasStructures.cpp.BCAAA0B119D94C94.idx  (+43 more)
cmake/: FetchDependencies.cmake  dastool.cmake  libdas.cmake
dasfiles/: cube.das  panzer3.7z  viking.das
html/: AsciiLineReader_8h_source.html  AsciiStreamReader_8h_source.html  Base64Decoder_8h_source.html  DASTool_8h_source.html  DasParser_8h_source.html  DasReaderCore_8h_source.html  DasStructures_8h_source.html  DasWriterCore_8h_source.html  ErrorHandlers_8h_source.html  FileNameString_8h_source.html  GLTFParser_8h_source.html  GLTFStructures_8h_source.html  HuffmanCompression_8h_source.html  Iterators_8h_source.html  JSONParser_8h_source.html  LibdasAssert_8h_source.html  Libdas_8h_source.html  Matrix_8h_source.html  Points_8h_source.html  STLCompiler_8h_source.html  STLParser_8h_source.html  STLStructures_8h_source.html  TextureReader_8h_source.html  URIResolver_8h_source.html  Vector_8h_source.html  WavefrontObjCompiler_8h_source.html  WavefrontObjParser_8h_source.html  WavefrontObjStructures_8h_source.html  annotated.html  classDASTool-members.html  classDASTool.html  classDASTool__coll__graph.map  classDASTool__coll__graph.md5  classLibdas_1_1AsciiFormatErrorHandler-members.html  classLibdas_1_1AsciiFormatErrorHandler.html  classLibdas_1_1AsciiFormatErrorHandler__coll__graph.map  classLibdas_1_1AsciiFormatErrorHandler__coll__graph.md5  classLibdas_1_1AsciiLineReader-members.html  classLibdas_1_1AsciiLineReader.html  classLibdas_1_1AsciiLineReader__coll__graph.map  (+519 more)
include/: Algorithm.h  Api.h  AsciiLineReader.h  AsciiStreamReader.h  Base64Decoder.h  BufferImageTypeResolver.h  DASTool.h  DasParser.h  DasReaderCore.h  DasStructures.h  DasValidator.h  DasWriterCore.h  Debug.h  ErrorHandlers.h  FileNameString.h  GLTFCompiler.h  GLTFParser.h  GLTFStructures.h  Hash.h  HuffmanCompression.h  Iterators.h  JSONParser.h  Libdas.h  LibdasAssert.h  Matrix.h  ParserErrorHandler.h  Points.h  Quaternion.h  STDUtils.h  STLCompiler.h  STLParser.cpp  STLParser.h  STLStructures.h  StreamReader.h  TextureReader.h  URIResolver.h  Vector.h  Vectors.h  WavefrontObjCompiler.h  WavefrontObjParser.h  (+15 more)
latex/: AsciiLineReader_8h_source.tex  AsciiStreamReader_8h_source.tex  Base64Decoder_8h_source.tex  DASTool_8h_source.tex  DasParser_8h_source.tex  DasReaderCore_8h_source.tex  DasStructures_8h_source.tex  DasWriterCore_8h_source.tex  ErrorHandlers_8h_source.tex  FileNameString_8h_source.tex  GLTFParser_8h_source.tex  GLTFStructures_8h_source.tex  HuffmanCompression_8h_source.tex  Iterators_8h_source.tex  JSONParser_8h_source.tex  LibdasAssert_8h_source.tex  Libdas_8h_source.tex  Matrix_8h_source.tex  Points_8h_source.tex  STLCompiler_8h_source.tex  STLParser_8h_source.tex  STLStructures_8h_source.tex  TextureReader_8h_source.tex  URIResolver_8h_source.tex  Vector_8h_source.tex  WavefrontObjCompiler_8h_source.tex  WavefrontObjParser_8h_source.tex  WavefrontObjStructures_8h_source.tex  annotated.tex  classDASTool.tex  classDASTool__coll__graph.md5  classLibdas_1_1AsciiFormatErrorHandler.tex  classLibdas_1_1AsciiLineReader.tex  classLibdas_1_1AsciiLineReader__coll__graph.md5  classLibdas_1_1AsciiLineReader__inherit__graph.md5  classLibdas_1_1AsciiSTLParser.tex  classLibdas_1_1AsciiSTLParser__coll__graph.md5  classLibdas_1_1AsciiSTLParser__inherit__graph.md5  classLibdas_1_1AsciiStreamReader.tex  classLibdas_1_1AsciiStreamReader__inherit__graph.md5  (+154 more)
premake/: DASTool.lua  libdas-shared.lua  libdas-static.lua  libdas.lua
scripts/: ConvertAndTest.ps1  ConvertAndTest.sh  GenerateVectorOperations.py  ListAll.sh  Validate.sh  ValidateModels.ps1  compile_gltf  compile_gltf.ps1  compile_stl.sh  compile_wobj.sh  list_test.sh  match.txt  test_all.sh  validate_test.sh
src/: Algorithm.cpp  AsciiLineReader.cpp  AsciiStreamReader.cpp  Base64Decoder.cpp  BufferImageTypeResolver.cpp  DASTool.cpp  DasParser.cpp  DasReaderCore.cpp  DasStructures.cpp  DasValidator.cpp  DasWriterCore.cpp  Debug.cpp  ErrorHandlers.cpp  FileNameString.cpp  GLTFCompiler.cpp  GLTFParser.cpp  Hash.cpp  HuffmanCompression.cpp  JSONParser.cpp  LodGenerator.cpp  MultiAttributeLodGenerator.cpp  ParserErrorHandler.cpp  STLCompiler.cpp  STLParser.cpp  STLStructures.cpp  StreamReader.cpp  TextureReader.cpp  URIResolver.cpp  WavefrontObjCompiler.cpp  WavefrontObjParser.cpp  WavefrontObjStructures.cpp  asmtest.c  dam.c  dam.cpp  das_asset_assembler.c  das_asset_writer.cpp  das_check.c  das_loader.c  das_loader.cpp  das_runtime.c  (+17 more)
tests/: AsciiSTLParseTest.cpp  Base64DecoderTest.cpp  BinarySTLParseTest.cpp  DasReaderCoreTest.cpp  GLTFCompilerTest.cpp  GLTFParserTest.cpp  HuffmanCompressionTest.cpp  IntrinsicsTest.cpp  JSONParserTest.cpp  KMP.cpp  MatrixIterationTest.cpp  QuaternionTest.cpp  STLCompilerTest.cpp  TextureReaderTest.cpp  WavefrontObjCompilerTest.cpp  WavefrontObjParseTest.cpp  WavefrontObjStreamReader.cpp  WriterCoreTest.cpp
utils/: convert_gltf  convert_stl  convert_wobj
(+240 files in other folders)
